# navinfo-vio-msckf

./: .arcconfig  .gitignore  CMakeLists.txt  README.md
build_pc/: CMakeLists.txt
build_pc/config/: 3dof_odom.yaml  EuRoC.yaml  MH_01_cam0.txt  MH_05_ground_truth.txt  NavInfo.yaml  ap03.yaml  camchain-imucam-euroc-noextrinsics.yaml  camchain-imucam-euroc.yaml  euroc_odom.yaml  st_odom.yaml  stodom.rviz
build_sim/: CMakeLists.txt
include/: global_param.h  interface_msckf_vio.h  vio_manager.h
include/Initializer/: ImuPreintegration.h  dynamic_initializer.h  feature_manager.h  initial_alignment.h  initial_sfm.h  initializer.h  solve_5pts.h  static_initializer.h
include/msckf_vio/: cam_state.h  data_interface.h  feature.hpp  image_processor.h  imu_state.h  math_utils.hpp  msckf_vio.h
include/thread_run/: common.h  condition.h  mutex.h  semaphevent.h  thread.h
launch/: ap03.launch  euroc.launch  navinfo.launch
rviz/: rviz_euroc_config.rviz
src/: global_param.cpp  image_processor.cpp  interface_msckf_vio.cpp  msckf_vio.cpp  vio_manager.cpp
src/Initializer/: dynamic_initializer.cpp  feature_manager.cpp  initial_alignment.cpp  initial_sfm.cpp  initializer.cpp  solve_5pts.cpp  static_initializer.cpp
src/imu_gps_localizer/: imu_gps_localizer.cpp
src/sim/: gener_alldata.cpp  imu.cpp  param.cpp  param.h  utilities.cpp  utilities.h
src/sim/python_tool/: draw_points.py
test/: ros_euroc.cpp  ros_navinfo.cpp  test_euroc.cpp  test_navinfo.cpp
